# minidfs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  server.cpp
application/: application.cpp  application.h  main.cpp  minidfs.h
application/core/: asset_manager.cpp  asset_manager.h  registry.h  worker_pool.cpp  worker_pool.h
application/panels/: file_explorer_panel.cpp  file_explorer_panel.h  layer.h  layout.cpp  layout.h
application/panels/FileExplorer/: file_sidebar_panel.cpp  file_sidebar_panel.h
application/platform/mac/: mac_app.h
application/platform/windows/: windows_app.cpp  windows_app.h
cmake/: setup_application.cmake  setup_deps.cmake  setup_grpc.cmake  setup_imgui.cmake  setup_libminidfs.cmake  setup_proto.cmake  setup_server.cmake  setup_tests.cmake
dfs/: client.cpp  file_manager.cpp  file_manager.h  main.cpp  minidfs_client.cpp  minidfs_client.h  minidfs_impl.cpp  minidfs_impl.h  pubsub_manager.cpp  pubsub_manager.h  server.cpp  server.h  utils.h
gui/application/: application.h  layout.cpp  main.cpp
gui/application/mac/: mac_app.h  mac_app.mm
gui/application/windows/: windows_app.h
gui/ios/homelib-ios/: AppLayoutView.swift  homelib_iosApp.swift
gui/ios/homelib-ios.xcodeproj/: project.pbxproj
gui/ios/homelib-ios/Groups/: GroupsView.swift
gui/ios/homelib-ios/components/Drawer/: DrawerView.swift
gui/ios/homelib-ios/components/Files/: FileGridView.swift  FileGridViewModel.swift
gui/ios/homelib-ios/components/Search/: SearchBarView.swift
gui/ios/homelib-ios/components/Upload/: UploadActivityView.swift  UploadFileView.swift
gui/ios/homelib-ios/pages/Account/: AccountView.swift
gui/ios/homelib-ios/pages/Home/: HomeDropdownView.swift  HomeView.swift  HomeViewModel.swift
gui/ios/homelib-ios/pages/MyFiles/: MyFiles.swift
gui/ios/homelib-iosTests/: homelib_iosTests.swift
gui/ios/homelib-iosUITests/: homelib_iosUITests.swift  homelib_iosUITestsLaunchTests.swift
minidfs/: CMakeLists.txt
minidfs/cmake/: setup_application.cmake
minidfs/src/application/: application.cpp  application.h
minidfs/src/application/core/: app_view_registry.h  util.cpp
minidfs/src/application/panels/: panel_ui.h
minidfs/src/application/panels/FileExplorer/: file_explorer_panel.h  file_explorer_state.h  file_sidebar_panel.cpp  file_sidebar_panel.h  file_sidebar_state.h
minidfs/src/application/panels/Navbar/: navbar_panel.cpp  navbar_panel.h  navbar_state.h
minidfs/src/application/views/: app_view.h  auth_view.cpp  auth_view.h  login_view.cpp  login_view.h  main_view.cpp  main_view.h  register_view.cpp  register_view.h  ts_view.cpp  ts_view.h
proto/: minidfs.proto
proto_src/: minidfs.grpc.pb.cc  minidfs.grpc.pb.h  minidfs.pb.cc  minidfs.pb.h
proxy/: go.mod  go.sum  main.go  proxy.go
proxy/api/: tsbase.go
proxy/core/: tsbase.go
scripts/: proto.sh
src/application/: application.cpp  application.h
src/dfs/: file_sync_engine.cpp  file_sync_engine.h  minidfs_client.cpp  minidfs_client.h
src/dfs/FileSync/: file_sync.cpp  file_sync.h  file_sync_win.cpp  file_sync_win.h
src/dfs/file_sync/: file_sync.cpp  file_sync_win.cpp  file_sync_win.h
src/tests/: minidfs_single_client_tests.cpp
tests/: file_manager_tests.cpp  minidfs_client_tests.cpp  minidfs_multi_client_tests.cpp  minidfs_single_client_tests.cpp  minidfs_tests.cpp
(+12 files in other folders)
